debian/arduino-app-cli/var/lib/arduino-app-cli/assets/0.9.0/api-docs/arduino/app_bricks/llm/API.md
# llm API Reference

## Index

- Class `LargeLanguageModel`

---

## `LargeLanguageModel` class

```python
class LargeLanguageModel(api_key: str, system_prompt: str, temperature: Optional[float], max_tokens: int, timeout: Optional[int], tools: List[Callable[..., Any]], model: str)
```

A Brick for interacting with locally-based Large Language Models (LLMs).

This class wraps LangChain functionality to provide a simplified, unified interface
for chatting with models like Qwenm, LLama, Gemma. It supports both synchronous
'one-shot' responses and streaming output, with optional conversational memory.

### Parameters

- **api_key** (*str*): The API access key for the target LLM service. Defaults to the
'LOCAL_LLM_API_KEY' environment variable.
- **model** (*str*): The specific model name or identifier to use (e.g., "genie:qwen3-4b").
If not provided, model will be determined from app configuration or default brick configuration.
- **system_prompt** (*str*): A system-level instruction that defines the AI's persona
and constraints (e.g., "You are a helpful assistant"). Defaults to empty.
- **temperature** (*Optional[float]*): The sampling temperature between 0.0 and 1.0.
Higher values make output more random/creative; lower values make it more
deterministic. Defaults to 0.7.
- **max_tokens** (*int*): The maximum number of tokens to generate in the response.
Defaults to 512.
- **timeout** (*Optional[int]*): The maximum duration in seconds to wait for a response before
timing out. Defaults to None.
- **tools** (*List[Callable[..., Any]]*), default=None: A list of callable tool functions to register. Defaults to None.
- ****kwargs**: Additional arguments passed to the model constructor

### Raises

- **ValueError**: If `api_key` is not provided (empty string).

### Methods

#### `list_models()`

Returns a list of supported local model identifiers.

Note: LargeLanguageModel supports OpenAI-compatible API. This method uses the OpenAI client to query available models from the local server.
LangChain's OpenAI wrapper does not provide a direct method to list models, so we need to use the underlying OpenAI client directly.

##### Returns

- (*List[str]*): A list of supported model names (e.g., ["qwen2.5-7b"]).

#### `with_memory(max_messages: int)`

Enables conversational memory for this instance.

Configures the Brick to retain a window of previous messages, allowing the
AI to maintain context across multiple interactions.

##### Parameters

- **max_messages** (*int*): The maximum number of messages (user + AI) to keep
in history. Older messages are discarded. Set to 0 to disable memory.
Defaults to 10.

##### Returns

- (*LargeLanguageModel*): The current instance, allowing for method chaining.

#### `get_client()`

Returns the underlying LangChain model instance.

This allows for advanced users to access the full capabilities of the model
directly, such as calling `generate()` or `stream()` with custom message formats.

##### Returns

- (*BaseChatModel*): The LangChain chat model instance used internally.

#### `chat(message: str, images: List[str | bytes])`

Sends a message to the AI and blocks until the complete response is received.

This method automatically manages conversation history if memory is enabled.

##### Parameters

- **message** (*str*): The input text prompt from the user.
- **images** (*List[str | bytes]*): Optional list of image file paths or raw bytes to include in the prompt.

##### Returns

- (*str*): The complete text response generated by the AI.

##### Raises

- **RuntimeError**: If the internal chain is not initialized or if the API request fails.

#### `chat_stream(message: str, images: List[str | bytes])`

Sends a message to the AI and yields response tokens as they are generated.

This allows for processing or displaying the response in real-time (streaming).
The generation can be interrupted by calling `stop_stream()`.

##### Parameters

- **message** (*str*): The input text prompt from the user.
- **images** (*List[str | bytes]*): Optional list of image file paths or raw bytes to include in the prompt.

##### Returns

- (*str*): Chunks of text (tokens) from the AI response.

##### Raises

- **RuntimeError**: If the internal chain is not initialized or if the API request fails.
- **AlreadyGenerating**: If a streaming session is already active.

#### `stop_stream()`

Signals the active streaming generation to stop.

This sets an internal flag that causes the `chat_stream` iterator to break
early. It has no effect if no stream is currently running.

#### `clear_memory()`

Clears the conversational memory history.

Resets the stored context. This is useful for starting a new conversation
topic without previous context interfering. Only applies if memory is enabled.

